fixed button spacing, white space between message field and addressee field, adjust landing page price.

--- a/client/src/components/emailcreate/email.css
+++ b/client/src/components/emailcreate/email.css
@@ -23,7 +23,7 @@
   height: 450px;
 }
 
-.email-fields {
+.email-fields:first-child {
   margin-bottom: 15px;
 }
 .controls {
@@ -47,6 +47,10 @@
 
 .fields {
   margin-top: 20px;
+}
+
+.btn-group-vertical>.btn-group:not(:first-child)>.btn {
+  width: 102px;
 }
 
   /* Form Icons CSS */
@@ -90,5 +94,8 @@ footer {
   .analysis {
     margin-bottom: 10px;
     margin-top: 30px;
+  }
+  .top-row {
+    margin-bottom: -20px;
   }
 }
